--- a/projects.html
+++ b/projects.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <!--Metatags-->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="author" content="Jahzeel Mendez">
+        <meta name="description" content ="Jahzeel Mendez portfolio of projects">
+        
+        <!--CSS-->
         <link href="css/styles.css" rel="stylesheet" type="text/css"/>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <script src="js/main.js"></script>
-        <title>Projects</title>
+
+        <!--Bootstrap-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        
+        <!--Title-->
+        <title>Jahzeel Mendez | Projects</title>
+
+        <!--Favicon-->
+        <link rel="icon" type="image/x-icon" href="img/logo/logo.png">
     </head>
     <body>
-        <nav-template src="templates/nav-template.html" tab="projects"></nav-template>
+        <header>
+            <nav-template src="templates/nav-template.html" tab="projects"></nav-template>
+            <h1>Coming soon...</h1>
+        </header>
+
+        <main>
+
+            <!--Modal-->
+            <section>
+                <modal-template src="templates/modal.html"></modal-template>
+            </section>
+        </main>
+
+        <!--Footer-->
+        <footer-template src="templates/footer.html"></footer-template>
+
+        <!--Scripts-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>  
