--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                                 skills in software development and data analysis. I learn quickly and am excited to learn and work
                             </p>
                             <p class="text-start">
-                                Currently, I am studying at the <a href="uaem.mx/index.html" target="_blank" class="animated-link">Universidad Autónoma del Estado de Morelos</a> and I am looking for my first job opportunity 
+                                Currently, I am studying at the <a href="url(uaem.mx)" target="_blank" class="animated-link">Universidad Autónoma del Estado de Morelos</a> and I am looking for my first job opportunity 
                                 to carve out a place for myself in this world.
                             </p>
 
