--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h1>Programmer and AI Student...</h1>
                 <p>Hi, I'm Jahzeel, a young programmer with a passion for coding. I love turning ideas into reality through the power of technology.</p>
                 <img class="img-fluid mx-auto col-4 col-md-3 col-lg-1" src="img/index/chr_main.png">
-                <img class="img-fluid" src="img/index/hero_computer.png" style="max-width: 500px;">
+                <img class="mx-auto image-computer" src="img/index/hero_computer.png">
             </div>
         </header>
         <main>
