Adds projects and improve page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!--Hero-->
             <div class="bg-image text-center px-4 py-5 my-5" style="background-image: url('img/index/hero_bg.png');">
                 <h1>Programmer and AI Student...</h1>
-                <p>Hi, I'm Jahzeel, a young programmer with a passion for coding. I love turning ideas into reality through the power of technology.</p>
+                <p class="size-text">Hi, I'm Jahzeel, a young programmer with a passion for coding. I love turning ideas into reality through the power of technology.</p>
                 <img class="img-fluid mx-auto col-4 col-md-3 col-lg-1" src="img/index/chr_main.png">
                 <img class="mx-auto image-computer" src="img/index/hero_computer.png">
             </div>
@@ -38,7 +38,9 @@
                 <div class="container-fluid shadow p-3 mb-5 bg-body rounded text-center">
                     <!--About me-->
                     <h2>Hi, nice to meet you :)</h2>
-                    <p style="padding: 5%;">I'm a student of Artificial Intelligence with a solid knowledge base. Interested in roles that allow developing skills in software development, data analysis, and artificial intelligence. I learn quickly and I'm excited to learn and work.</p>
+                    <div class="container">
+                        <p class="size-text" style="padding: 5%;">I'm a student of Artificial Intelligence with a solid knowledge base. Interested in roles that allow developing skills in software development, data analysis, and artificial intelligence. I learn quickly and I'm excited to learn and work.</p>
+                    </div>
                     
                     <!--Cards-->
                     <div class="container bootstrap snippets bootdeys">
@@ -77,7 +79,7 @@
             <section>
                 <div class="bg-image container-fluid text-center responsive-wrapper" style="background-image: linear-gradient(white,transparent), url('img/index/projects_bg.jpg');">
                     <!--Description-->
-                    <h2 class="p-3">Some stuff...</h2>
+                    <h2 class="p-3 size-text">Some stuff...</h2>
                     <p>Here are some personal projects I developed, if you want more information, go to the <a class="animated-link" href="projects.html">projects page.</a></p>
                     
                     <!--Wrapper-->
