--- a/turing-machine.html
+++ b/turing-machine.html
@@ -40,7 +40,7 @@
                     <p style="font-size:1.3rem;">
                         A Turing machine is a device that manipulates symbols on a strip of tape according to a table of rules. 
                         Despite its simplicity, a Turing machine can be adapted to simulate the logic of any computer algorithm 
-                        and is particularly useful in explaining the functions of a CPU within a computer.
+                        and is particularly useful in explaining the functions of a CPU within a computer.<a href="https://en.wikipedia.org/wiki/Turing_machine#:~:text=A%20Turing%20machine%20is%20a,A%20physical%20Turing%20machine%20model." class="animated-link"> (ref)</a>
                     </p>
                 </div>
                 <div>
